force-app/main/default/objects/SC_Score_Card__c/fields/Practical_Experience_in_the_Industry__c.field-meta.xml
<CustomField>
    <fullName>Practical_Experience_in_the_Industry__c</fullName>
    <description>Degree of Practical Experience in the Industry:</description>
    <inlineHelpText>Degree of Practical Experience in the Industry:</inlineHelpText>
    <label>Practical Experience in the Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5+ years (2 pts)</fullName>
            </value>
            <value>
                <fullName>Less than 5 years (1 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>