force-app/main/default/objects/SC_Score_Card__c/fields/Product_Placement_strategic_plan_describ__c.field-meta.xml
<CustomField>
    <fullName>Product_Placement_strategic_plan_describ__c</fullName>
    <label>Product Placement Plan Described</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>