force-app/main/default/objects/SC_Score_Card__c/fields/Retail_Store_Design_Plan_and_objective_d__c.field-meta.xml
<CustomField>
    <fullName>Retail_Store_Design_Plan_and_objective_d__c</fullName>
    <label>Retail Store Design Plan Described</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>