force-app/main/default/objects/SC_Score_Card__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Grant Reviewer1</fullName>
            </value>
            <value>
                <fullName>Grant Reviewer2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>