force-app/main/default/objects/SC_Score_Card__c/fields/Risk_Analysis_has_been_completed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Analysis_has_been_completed__c</fullName>
    <description>Risk Analysis has been completed: market, financial and operational</description>
    <inlineHelpText>Risk Analysis has been completed: market, financial and operational</inlineHelpText>
    <label>Risk Analysis has been completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (2 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>