force-app/main/default/objects/SC_Score_Card__c/fields/Sales_Forecasting_Processes_Described__c.field-meta.xml
<CustomField>
    <fullName>Sales_Forecasting_Processes_Described__c</fullName>
    <label>Sales Forecasting Processes Described</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>