force-app/main/default/objects/SC_Score_Card__c/fields/Sales_Revenue_projections_are_realistic__c.field-meta.xml
<CustomField>
    <fullName>Sales_Revenue_projections_are_realistic__c</fullName>
    <description>Sales/Revenue projections are realistic and reflect the growth and seasonality of the business</description>
    <inlineHelpText>Sales/Revenue projections are realistic and reflect the growth and seasonality of the business</inlineHelpText>
    <label>Sales/Revenue projections are realistic?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (3 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>