force-app/main/default/objects/SC_Score_Card__c/fields/Speed_to_Closing_Sales__c.field-meta.xml
<CustomField>
    <fullName>Speed_to_Closing_Sales__c</fullName>
    <description>Speed to Closing Sales</description>
    <inlineHelpText>Speed to Closing Sales</inlineHelpText>
    <label>Speed to Closing Sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business has closed sales or existing client base (3 pts)</fullName>
            </value>
            <value>
                <fullName>Business has no closed sales or existing client base but does have firm orders (2 pts)</fullName>
            </value>
            <value>
                <fullName>Business has no closed sales or exsting client base or firm orders but does have letter(s) of intent (1 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>