force-app/main/default/objects/SC_Score_Card__c/fields/Starter_Company__c.field-meta.xml
<CustomField>
    <fullName>Starter_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master detail  lookup of starter Company.
Master- Starter Company
Detail- SC Score Card</description>
    <label>Starter Company</label>
    <referenceTo>Starter_Company_Clients__c</referenceTo>
    <relationshipLabel>SC Score Cards</relationshipLabel>
    <relationshipName>SC_Score_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>