force-app/main/default/objects/SC_Score_Card__c/fields/States_an_appropriate_pricing_strategy__c.field-meta.xml
<CustomField>
    <fullName>States_an_appropriate_pricing_strategy__c</fullName>
    <description>States an appropriate and realistic pricing strategy, based on the SWOT analysi</description>
    <inlineHelpText>States an appropriate and realistic pricing strategy, based on the SWOT analysi</inlineHelpText>
    <label>States an appropriate pricing strategy?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (2 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>