force-app/main/default/objects/SC_Score_Card__c/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <label>STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>