force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_CP__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_CP__c</fullName>
    <formula>Points_Business_Objective__c + Points_Target_market__c + Points_Geographical_Area__c + Points_Value_Proposition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>