force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_Customer_Retention__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_Customer_Retention__c</fullName>
    <formula>Points_Awarded_CRM_System__c+Points_Awarded_Customer_Loyalty_Program__c+Points_Awarded_Customer_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>