force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_EP__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_EP__c</fullName>
    <formula>Points_Level_of_Education__c + Points_Degree_Management__c + Points_Practical_Experience__c + Points_Industry_Network__c +  Points_Awarded_Management_Profiled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>