force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_FA__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_FA__c</fullName>
    <formula>Points_Cash_Flow_projections__c + Points_Demonstrated_personal__c + Points_Assumptions_identified__c + Points_Sales_Revenue_projections__c + Points_All_Operating_Cost__c + Points_Grant_Allocation_FP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>