force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_Inventory_Management__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_Inventory_Management__c</fullName>
    <formula>Points_Awarded_Sales_Forecasting__c+Points_Awarded_Tracking_Inventory__c+Points_Awarded_Quality_control__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>