force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_Managing_Staff__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_Managing_Staff__c</fullName>
    <formula>Points_Awarded_Hiring_Practices__c+Points_Awarded_Performance_Management__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>