force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_Market_Research__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_Market_Research__c</fullName>
    <formula>Points_Awarded_Market_Research__c+Points_Awarded_Competitors__c+Points_Awarded_Corporate_Objective__c+Points_Awarded_Identify_Gaps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>