force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_MSP__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_MSP__c</fullName>
    <formula>Points_Business_Plan_SWOT__c + Points_Appropriate_pricing__c + Points_Details_realistic_plan__c + Points_Speed_Closing_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>