force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_OP__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_OP__c</fullName>
    <formula>Points_Operating_Process__c + Points_Assets_required__c + Points_Company_has_good__c + Points_Full_cost_product__c + Points_Risk_Analysis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>