force-app/main/default/objects/SC_Score_Card__c/fields/SUB_TOTAL_Store_Merchandising__c.field-meta.xml
<CustomField>
    <fullName>SUB_TOTAL_Store_Merchandising__c</fullName>
    <formula>Points_Awarded_Product_Placement__c+Points_Awarded_Retail_Store_Design__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUB-TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>