force-app/main/default/objects/SC_Score_Card__c/fields/Target_Market_Area_clearly_Identified__c.field-meta.xml
<CustomField>
    <fullName>Target_Market_Area_clearly_Identified__c</fullName>
    <description>Target market &amp; Area clearly identified?</description>
    <inlineHelpText>Target market &amp; Area clearly identified?</inlineHelpText>
    <label>Target Market &amp; Area clearly Identified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (1 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>