force-app/main/default/objects/SC_Score_Card__c/fields/TOTAL_POINTS__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_POINTS__c</fullName>
    <formula>SUB_TOTAL_EP__c + SUB_TOTAL_CP__c + SUB_TOTAL_OP__c + SUB_TOTAL_MSP__c + SUB_TOTAL_FA__c+SUB_TOTAL_Managing_Staff__c+SUB_TOTAL_Customer_Retention__c+SUB_TOTAL_Inventory_Management__c+SUB_TOTAL_Store_Merchandising__c+ SUB_TOTAL_Market_Research__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL POINTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>