force-app/main/default/objects/SC_Score_Card__c/fields/Tracking_Inventory_for_Operating__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Inventory_for_Operating__c</fullName>
    <label>Tracking Inventory for Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>