force-app/main/default/objects/SC_Score_Card__c/fields/Value_proposition_is_evident__c.field-meta.xml
<CustomField>
    <fullName>Value_proposition_is_evident__c</fullName>
    <description>The value proposition is evident?</description>
    <inlineHelpText>The value proposition is evident?</inlineHelpText>
    <label>Value proposition is evident?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (1 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>