force-app/main/default/objects/SC_Score_Card__c/recordTypes/Female_Founders_Program.recordType-meta.xml
<RecordType>
    <fullName>Female_Founders_Program</fullName>
    <active>true</active>
    <label>Female Founders Program</label>
</RecordType>