force-app/main/default/objects/SC_Score_Card__c/recordTypes/Retail_Program.recordType-meta.xml
<RecordType>
    <fullName>Retail_Program</fullName>
    <active>true</active>
    <label>Retail Program</label>
</RecordType>