force-app/main/default/objects/SC_Score_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grant_Reviewer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Business_Name1__c</columns>
    <columns>STATUS__c</columns>
    <columns>TOTAL_POINTS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>